Suggested Title in Project Description.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -384,6 +384,7 @@ projectDescription.crossCuttingDimensions=Cross cutting theme
 projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
+projectDescription.suggestedName=Suggested Title
 projectDescription.originalDonor=Original Donor
 projectDescription.customerDonor=Customer/Direct Donor
 projectDescription.shortName=Short name
