Globa properties and fixed issue with read mode, project partners

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -385,11 +385,13 @@ projectDescription.notFundingSource=There are not funding source(s) added yet.
 projectDescription.notOutputs=There are not output(s) added yet.
 projectDescription.name=Title
 projectDescription.suggestedName=Suggested Title
+projectDescription.suggestedName.readText=Suggested Title
 projectDescription.originalDonor=Original Donor
 projectDescription.customerDonor=Customer/Direct Donor
 projectDescription.shortName=Short name
 projectDescription.ocsCode=OCS Code
 projectDescription.description=Project Description/Objectives
+projectDescription.description.readText=Project Description/Objectives
 projectDescription.totalAmount=Total Amount
 projectDescription.extensionDate=Extension Date
 projectDescription.pl=Principal investigator (PI)
@@ -445,7 +447,9 @@ deliverableList.deliverablesRemove=Remove
 deliverableList.none=Not defined
 deliverableList.help=
 deliverable.crossCuttingDimensions=Cross cutting theme
+deliverable.crossCuttingDimensions.readText=Cross cutting theme
 deliverable.outputs=Deliverable output(s)
+deliverable.outputs.readText=Deliverable output(s)
 deliverable.notOutputs=There are not output(s) added yet.
 deliverable.type=Type
 deliverable.subType=Sub Type
