Read mode, monitoring outcomes and project list

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -296,7 +296,7 @@ programImpact.outcomeList.delete= Delete
 programImpact.outcomeList.title.none=No title defined
 programImpact.outcomeList.removeOutcome=Remove this Outcome
 programImpact.outcomeList.cannotDelete=The Outcome that you are trying to delete cannot be deleted
-programImpact.outcomeList.requiredFields=Required Fileds
+programImpact.outcomeList.requiredFields=Required Fields
 
 ## Program Impacts - Outcomes
 outcome.inputTargetValue.placeholder=Value
@@ -308,6 +308,8 @@ outcome.year=Estimated Target year
 outcome.selectTargetUnit=Target unit
 outcome.selectTargetUnit.placeholder=Not Applicable
 outcome.targetValue=Target Value
+outcome.narrative.longTerm=Narrative for your level of progress on this milestone
+outcome.narrative.longTerm.readText=Narrative for your level of progress on this milestone
 outcome.milestones.emptyMessage=There are not Milestones associated to this Research Topic as of yet
 
 outcome.milestone.index.title=Milestone
@@ -316,7 +318,10 @@ outcome.milestone.index.statement.readText=Milestone Statement
 outcome.milestone.index.inputTargetYear=Estimated Target year
 outcome.milestone.index.selectTargetUnit=Target unit
 outcome.milestone.index.inputTargetValue=Target value
-outcome.milestone.index..placeholder=Value
+outcome.milestone.index.placeholder=Value
+outcome.milestone.index.narrative=Narrative for your level of progress on this milestone
+outcome.milestone.index.narrative.readText=Narrative for your level of progress on this milestone
+
 
 outcome.action.impactPathway.required=Select an Research Impact
 outcome.action.statement.required=Outcome Statement
