--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -542,6 +542,10 @@ capdev.notObjectives=There are not outcome(s) added yet.
 capdev.notDisciplines=There are not discipline(s) added yet.
 capdev.notDeliverables=There are not deliverable(s) added yet.
 capdev.supportDocuments=There are not support document(s) added yet.
+capdev.notCountries=There are not countries added yet.
+capdev.notRegions=There are not regions added yet.
+capdev.notPartners=There are not partners added yet.
+capdev.notTargetGroups=There are not target groups added yet.
 
 
 ##form CapDev
@@ -550,15 +554,17 @@ capdev.form.type=Type
 capdev.form.contactPerson=Contact person
 capdev.form.startDate=Start date
 capdev.form.endDate=End date
-capdev.form.country=Country
-capdev.form.region=Region
+capdev.form.country=Main Country
+capdev.form.countries=Others Countries
+capdev.form.region=Main Region
+capdev.form.regions=Others Regions
 capdev.form.researchArea=Research area
 capdev.form.researchProgram=Research program/Theme
 capdev.form.project=Project
 capdev.form.crp=CRP
 capdev.form.numParticipants=Num participants
-capdev.form.listOfApproaches=List of Disciplines
-capdev.form.objectives=Outcomes
+capdev.form.listOfApproaches=Disciplines
+capdev.form.objectives=Outputs
 capdev.form.participants=Participants
-capdev.form.selectApproach=Select an approach
-capdev.form.selectOutcome=Select an outcome
+capdev.form.selectApproach=Select a discipline to add
+capdev.form.selectOutcome=Select an outcome to add
