Working on admin sections

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -166,6 +166,7 @@ menu.admin=Center Admin
 menu.superadmin=System Admin
 menu.projects=Projects
 menu.projectsCofunded=Cofunded
+menu.superadmin.admin=Center Admin
 
 menu.superadmin.title=CGIAR SRF
 menu.superadmin.srfMenuTitle=CGIAR SRF
