Program coordinators , center admin

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -155,6 +155,16 @@ manageUsers.email.validation=First Name and Last Name are needed.
 ## Header
 header.logout=Logout
 
+#Admin menu
+admin.menu.hrefCoordination=Program Coordination
+admin.menu.hrefObjectives=Strategic Objectives
+admin.menu.hrefManagement=Research Management
+
+## Admin Section
+
+##Program Coordination
+programCoordination.title=CIAT Program Coordination
+
 ## Menu
 menu.login=Login
 menu.home=Home
@@ -181,6 +191,8 @@ menu.superadmin.siteIntegration=Site Integration
 menu.superadmin.notifications=Notifications
 menu.superadmin.users=Users
 menu.superadmin.permissions=Permissions
+
+centerAdmin.menu.title=Admin Menu
 
 ## MARLO Notifications
 notifications.systemReset.message=System reset messages
@@ -214,6 +226,8 @@ dashboard.decisionTree.startMonitoring=Monitoring Programs
 dashboard.decisionTree.finishDes=...
 
 ## Breadcrumb
+breadCrumb.menu.superadmin.admin=Center admin
+ breadCrumb.menu.superadmin.coordination=Program coordination
 breadCrumb.menu.impactPathway=Impact Pathway
 breadCrumb.menu.programImpacts=Program Impacts
 breadCrumb.menu.reseachTopics=Research Topics
