Impact Statement in Program Impact (SLO/IDO) issue #202

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -255,8 +255,8 @@ researchTopic.action.draft=Draft
 
 ## Program Impacts
 programImpact.programImpact=Program Impact
-programImpact.ido=SRF IDO
-programImpact.otherIdo=Please write the SRF IDO
+programImpact.ido=Program Impact Statement (Please select a combined SLO/IDO or write your onw customized Program Impact)
+programImpact.otherIdo=Please write the customized Program Impact
 programImpact.name=Program Impact Title
 programImpact.shortName=Short Name
 programImpact.name.readText=Program Impact Title
