Working on strateig objectives , center admin

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -165,6 +165,9 @@ admin.menu.hrefManagement=Research Management
 ##Program Coordination
 programCoordination.title=CIAT Program Coordination
 
+##Strategic objectives
+strategicObjectives.title=CIAT Strategic Objectives
+
 ## Menu
 menu.login=Login
 menu.home=Home
