--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -563,3 +563,6 @@ deleting.success=Deleted successfully.
 #read text
 milestone.readText=Milestone
 outcome.readText=Outcome
+
+#output request message
+output.request.message=This request will be reviewed by the Monitoring and Evaluation Team and Program Leader. Additions to the Impact Pathway outside of the annual planning period will be considered on a case by case basis.
