--- a/marlo-ciat/marlo-ciat-web/pom.xml
+++ b/marlo-ciat/marlo-ciat-web/pom.xml
@@ -427,6 +427,22 @@
 			<artifactId>jcommon</artifactId>
 			<version>1.0.16</version>
 		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/commons-fileupload/commons-fileupload -->
+		<dependency>
+		    <groupId>commons-fileupload</groupId>
+		    <artifactId>commons-fileupload</artifactId>
+		    <version>1.3.1</version>
+		</dependency>
+		
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-io -->
+		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-io</artifactId>
+		    <version>1.3.2</version>
+		</dependency>
+		
+		
 	</dependencies>
 
 	<!-- Profile configuration -->
