Added Outputs deleting validation.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -510,6 +510,8 @@ summaries.board.report.outputsContributionsSummary=Outputs contributions
 summaries.board.report.outputsContributionsSummary.description=
 summaries.board.report.ipByProgram=Impact pathway by Research Program
 summaries.board.report.ipByProgram.description=
+summaries.board.report.outcomeContribution=Outcomes Contribution
+summaries.board.report.outcomeContribution.description=
 
 
 ## email dear
