Cretae OSC link Class issue #207

--- a/marlo-ciat/configuration/dev/marlo.properties.sample
+++ b/marlo-ciat/configuration/dev/marlo.properties.sample
@@ -49,6 +49,13 @@ email.password=
 email.host=
 email.port=
 
+#------------------------------------------------------
+#OSC Beta CONFIG
+#------------------------------------------------------
+ocs.link=
+ocs.user=
+ocs.password=
+
 # ------------------------------------------------
 # Upload folder locations
 # ------------------------------------------------
