sessions capdev description and supporting documents

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -572,8 +572,10 @@ outcome.readText=Outcome
 
 
 ## CAPACITY DEVELOPMENT MENU
-capdev.menu.title= CapDev
-capdev.menu.hrefCapdev = Capacity Development
+capdev.menu.title= CapDev 
+capdev.menu.hrefCapdev = New Capdev Intervention
+capdev.menu.hrefDescription= Capdev Description
+capdev.menu.hrefSuppotingDocs= Suppoting Documents
 capdev.menu.hrefStatistics= Statistics
 
 
@@ -589,14 +591,15 @@ capdev.notTargetGroups=There are not target groups added yet.
 
 
 ##form CapDev
+capdev.select=select option...
 capdev.form.title=Title
 capdev.form.type=Type
 capdev.form.contactPerson=Contact person
 capdev.form.startDate=Start date
 capdev.form.endDate=End date
-capdev.form.country=Main Country
+capdev.form.country=Country(s)
 capdev.form.countries=Others Countries
-capdev.form.region=Main Region
+capdev.form.region=Region(s)
 capdev.form.regions=Others Regions
 capdev.form.researchArea=Research area
 capdev.form.researchProgram=Research program/Theme
@@ -608,6 +611,29 @@ capdev.form.objectives=Outputs
 capdev.form.participants=Participants
 capdev.form.selectApproach=Select a discipline to add
 capdev.form.selectOutcome=Select an outcome to add
+capdev.downloadTemplate=Download Template
+capdev.addindividualItem=Add individual item
+capdev.addgroupItem=Add group item
+capdev.participant=Participant
+capdev.participant.code=Code
+capdev.participant.firstName=First Name
+capdev.participant.lastName=Last Name
+capdev.participant.gender=Gender
+capdev.participant.citizenship=Citizenship
+capdev.participant.country=Country of residence
+capdev.participant.Highestdegree=Highest degree
+capdev.participant.Institution=Institution
+capdev.participant.Email=Email
+capdev.participant.Supervisor=Supervisor
+capdev.participant.Fellowship=Fellowship
+capdev.partnerts=Partners
+capdev.partnertSelect=Select a partnert
+capdev.targetgroup=Target group
+capdev.targetgroupselect=Select a Target group
+capdev.addSupportingDoc=Add a supporting document
+capdev.adUsersList=AD users List
+capdev.adUsersplaceHolder=First name, last name or email
+capdev.search=Search
 
 #output request message
 output.request.message=This request will be reviewed by the Monitoring and Evaluation Team and Program Leader. Additions to the Impact Pathway outside of the annual planning period will be considered on a case by case basis.
