Working on issue #208: 1. Program Impact

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -571,3 +571,12 @@ outcome.readText=Outcome
 
 #output request message
 output.request.message=This request will be reviewed by the Monitoring and Evaluation Team and Program Leader. Additions to the Impact Pathway outside of the annual planning period will be considered on a case by case basis.
+
+
+##Pentaho i8n parameters
+impactPathway.statement=Impact Statement
+impactPathway.intendedBeneficiaries=Intended beneficiaries
+impactPathway.type=Type
+impactPathway.focus=Focus
+impactPathway.region=Region
+impactPathway.noData=No impacts added
