fields validation to create a individual capdev intervention with the basic information.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -618,9 +618,9 @@ capdev.participant=Participant
 capdev.participant.code=Code
 capdev.participant.firstName=First Name
 capdev.participant.lastName=Last Name
-capdev.participant.gender=Gender
+capdev.participant.gender=Gender:
 capdev.participant.citizenship=Citizenship
-capdev.participant.country=Country of residence
+capdev.participant.country=Country of Institution
 capdev.participant.Highestdegree=Highest degree
 capdev.participant.Institution=Institution
 capdev.participant.Email=Email
