--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -580,3 +580,12 @@ impactPathway.type=Type
 impactPathway.focus=Focus
 impactPathway.region=Region
 impactPathway.noData=No impacts added
+outcomeOutput.title=Program Outcomes and Outputs
+outcomeOutput.noData=No outcomes added
+outcomeOutput.researchStatement=Research Topic
+outcomeOutput.outputNoData=No output added
+outcomeOutput.outputNextUser=Next user
+outcomeOutput.outputNextUserType=Type
+outcomeOutput.outputNextUserSubType=Sub-Type
+outcomeOutput.outputNextUserNoData=No next user added
+outcomeOutput.outputStatement=Output Statement
