fields validation to create a group capdev intervention with the basic information and participants listt preview.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -52,6 +52,7 @@ cancel.autoSave=Version recovered
 
 ## Form components
 form.buttons.save=Save
+form.buttons.add=Add
 form.buttons.validate=Validate
 form.buttons.submit=Submit
 form.buttons.reportProject=Report Project
@@ -595,6 +596,9 @@ capdev.select=select option...
 capdev.form.title=Title
 capdev.form.type=Type
 capdev.form.contactPerson=Contact person
+capdev.form.contactPerson.firstName=First Name
+capdev.form.contactPerson.lastName=Last Name 
+capdev.form.contactPerson.email=Email
 capdev.form.startDate=Start date
 capdev.form.endDate=End date
 capdev.form.country=Country(s)
@@ -606,6 +610,8 @@ capdev.form.researchProgram=Research program/Theme
 capdev.form.project=Project
 capdev.form.crp=CRP
 capdev.form.numParticipants=Num participants
+capdev.form.numMen=Num Men
+capdev.form.numWomen=Num Women
 capdev.form.listOfApproaches=Disciplines
 capdev.form.objectives=Outputs
 capdev.form.participants=Participants
@@ -634,6 +640,8 @@ capdev.addSupportingDoc=Add a supporting document
 capdev.adUsersList=AD users List
 capdev.adUsersplaceHolder=First name, last name or email
 capdev.search=Search
+capdev.fileType=Only excel files(.xls, xlsx) are allowed.
+capdev.fileSize=The maximun size allowed is 2 MB.
 
 #output request message
 output.request.message=This request will be reviewed by the Monitoring and Evaluation Team and Program Leader. Additions to the Impact Pathway outside of the annual planning period will be considered on a case by case basis.
