filter list of capdev types according to capdev category

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -593,6 +593,7 @@ capdev.notTargetGroups=There are not target groups added yet.
 
 ##form CapDev
 capdev.select=select option...
+capdev.gotoBack=Back to CapDev List
 capdev.form.title=Title
 capdev.form.type=Type
 capdev.form.contactPerson=Contact person
@@ -642,6 +643,25 @@ capdev.adUsersplaceHolder=First name, last name or email
 capdev.search=Search
 capdev.fileType=Only excel files(.xls, xlsx) are allowed.
 capdev.fileSize=The maximun size allowed is 2 MB.
+
+
+#Capacity developmente help texts
+capdev.help.title=Title of the capacity development intervention
+capdev.help.type=Choose one types from the drop down menu.
+capdev.help.contact=Indicate the first name, last name and e-mail address of a person who we can contact for further information on the capacity development intervention.
+capdev.help.startDate=Indicate the length of the capacity development intervention by choosing the start and end dates.
+capdev.help.endDate=Indicate the length of the capacity development intervention by choosing the start and end dates.
+capdev.help.country=Select the country or multiple countries where the capacity development intervention took place.
+capdev.help.region=Select the region or multiple regions where the capacity development intervention took place.
+capdev.help.researchArea=Select the research area that is the principal organizer of the capacity development intervention.
+capdev.help.researchProgram=Select the research program that is the principal organizer of the capacity development intervention.
+capdev.help.project=Select the project that is the principle organizer.
+capdev.help.crp=Select the CRP that is the principal organizer.
+capdev.help.numParticipants=Indicate the number of participants.
+capdev.help.numMen=Indicate the number of men who attended the capacity development intervention.
+capdev.help.numWomen=Indicate the number of women who attended the capacity development intervention.
+capdev.help.partner=Select one or multiple partner organization who co-organized the capacity development intervention with CIAT.
+
 
 #output request message
 output.request.message=This request will be reviewed by the Monitoring and Evaluation Team and Program Leader. Additions to the Impact Pathway outside of the annual planning period will be considered on a case by case basis.
