save disciplines and target groups for a capdev intervention

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -594,6 +594,8 @@ capdev.notTargetGroups=There are not target groups added yet.
 ##form CapDev
 capdev.select=select option...
 capdev.gotoBack=Back to CapDev List
+capdev.id=id
+capdev.category=category
 capdev.form.title=Title
 capdev.form.type=Type
 capdev.form.contactPerson=Contact person
@@ -625,7 +627,7 @@ capdev.participant=Participant
 capdev.participant.code=Code
 capdev.participant.firstName=First Name
 capdev.participant.lastName=Last Name
-capdev.participant.gender=Gender:
+capdev.participant.gender=Gender
 capdev.participant.citizenship=Citizenship
 capdev.participant.country=Country of Institution
 capdev.participant.Highestdegree=Highest degree
