--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -581,7 +581,7 @@ capdev.menu.hrefStatistics= Statistics
 
 
 ## Capacity Development -- 
-capdev.notObjectives=There are not outcome(s) added yet.
+capdev.notOutput=There are not outputs added yet.
 capdev.notDisciplines=There are not discipline(s) added yet.
 capdev.notDeliverables=There are not deliverable(s) added yet.
 capdev.supportDocuments=There are not support document(s) added yet.
