Working on issue #209: Pentaho design and internationalization

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -574,12 +574,16 @@ output.request.message=This request will be reviewed by the Monitoring and Evalu
 
 
 ##Pentaho i8n parameters
+#Project
+project.projectId=Project ID
+#Impact pathway
 impactPathway.statement=Impact Statement
 impactPathway.intendedBeneficiaries=Intended beneficiaries
 impactPathway.type=Type
 impactPathway.focus=Focus
 impactPathway.region=Region
 impactPathway.noData=No impacts added
+#OutcomeOutput
 outcomeOutput.title=Program Outcomes and Outputs
 outcomeOutput.noData=No outcomes added
 outcomeOutput.researchStatement=Research Topic
@@ -589,3 +593,9 @@ outcomeOutput.outputNextUserType=Type
 outcomeOutput.outputNextUserSubType=Sub-Type
 outcomeOutput.outputNextUserNoData=No next user added
 outcomeOutput.outputStatement=Output Statement
+#Deliverable
+deliverable.deliverableId=Deliverable ID
+deliverable.title=Title
+deliverable.startDate=Start date
+deliverable.endDate=End date
+deliverable.supportingDocuments=Supporting document(s)
