Working on issue #209: deliverables summary

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -599,3 +599,11 @@ deliverable.title=Title
 deliverable.startDate=Start date
 deliverable.endDate=End date
 deliverable.supportingDocuments=Supporting document(s)
+deliverable.climateChange=Climate Change
+deliverable.gender=Gender
+deliverable.youth=Youth
+deliverable.na=N/A
+deliverable.capacityDevelopment=Capacity Development
+deliverable.bigData=Big Data
+deliverable.impactAssessment=Impact Assessment
+deliverable.policiesInstitutions=Policies and Institutions
