format capdev Start date

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -647,6 +647,8 @@ capdev.fileType=Only excel files(.xls, xlsx) are allowed.
 capdev.fileSize=The maximun size allowed is 2 MB.
 
 
+
+
 #Capacity developmente help texts
 capdev.help.title=Title of the capacity development intervention
 capdev.help.type=Choose one types from the drop down menu.
@@ -663,6 +665,38 @@ capdev.help.numParticipants=Indicate the number of participants.
 capdev.help.numMen=Indicate the number of men who attended the capacity development intervention.
 capdev.help.numWomen=Indicate the number of women who attended the capacity development intervention.
 capdev.help.partner=Select one or multiple partner organization who co-organized the capacity development intervention with CIAT.
+
+##Capacity Development missing fields
+capdev.action.category=category
+capdev.action.title=Title
+capdev.action.type=Type
+capdev.action.contactPerson=Contact person
+capdev.action.contactPerson.firstName=First Name
+capdev.action.contactPerson.lastName=Last Name 
+capdev.action.contactPerson.email=Email
+capdev.action.startDate=Start date
+capdev.action.endDate=End date
+capdev.action.country=Country(s)
+capdev.action.countries=Others Countries
+capdev.action.region=Region(s)
+capdev.action.regions=Others Regions
+capdev.action.numParticipants=Num participants
+capdev.action.numMen=Num Men
+capdev.action.numWomen=Num Women
+capdev.action.participant=Participant
+capdev.action.participant.code=Code
+capdev.action.participant.firstName=First Name
+capdev.action.participant.lastName=Last Name
+capdev.action.participant.gender=Gender
+capdev.action.participant.citizenship=Citizenship
+capdev.action.participant.country=Country of Institution
+capdev.action.participant.Highestdegree=Highest degree
+capdev.action.participant.Institution=Institution
+capdev.action.participant.Email=Email
+capdev.action.participant.Supervisor=Supervisor
+capdev.action.participant.Fellowship=Fellowship
+capdev.action.fileType=Only excel files(.xls, xlsx) are allowed.
+capdev.action.fileSize=The maximun size allowed is 30MB.
 
 
 #output request message
