Prepare to merge CAP DEV.

--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -226,7 +226,7 @@ login.disclaimer=<b>PLEASE NOTE</b> that by using the system, you consent to the
 dashboard.decisionTree.title=What do you want to do?
 dashboard.decisionTree.defineImpact=Define Impact Pathway
 dashboard.decisionTree.startMonitoring=Monitoring Programs
-dashboard.decisionTree.finishDes=...
+dashboard.decisionTree.finishDes=Summaries
 
 ## Breadcrumb
 breadCrumb.menu.superadmin.admin=Center admin
