--- a/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
+++ b/marlo-ciat/marlo-ciat-web/src/main/resources/global.properties
@@ -665,6 +665,9 @@ capdev.help.numParticipants=Indicate the number of participants.
 capdev.help.numMen=Indicate the number of men who attended the capacity development intervention.
 capdev.help.numWomen=Indicate the number of women who attended the capacity development intervention.
 capdev.help.partner=Select one or multiple partner organization who co-organized the capacity development intervention with CIAT.
+capdev.help.output=Select one or multiple outputs.
+capdev.help.discipline=Select one or multiple disciplines.
+capdev.help.targetgroup=Select one or multiple target groups.
 
 ##Capacity Development missing fields
 capdev.action.category=category
